# hk_tool_web

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ACCEPTANCE_T049.md  ANSWER_TO_USER_QUESTIONS.md  CHANGELOG.md  CHANGELOG_ENERGY_LOGGING.md  CLAUDE.md  COCKPIT_QUICKSTART.md  COCKPIT_TEST_REPORT.md  COCKPIT_TEST_SUMMARY.md  DEPLOY.md  DESKTOP_PYSIDE6_IMPLEMENTATION.md  ENERGY_COCKPIT_STATUS_REPORT.md  ENERGY_REAL_DATA_IMPLEMENTATION_PLAN.md  ENERGY_REAL_DATA_IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE_T045.md  LICENSE  Makefile  PHASE_4_COMPLETION_SUMMARY.md  PHASE_4_IMPLEMENTATION_UPDATE.md  PROJECT_SUMMARY.md  README.md  RESTART_SCRIPTS.md  RESTART_SCRIPTS_QUICK_GUIDE.md  RESTART_SCRIPTS_TEST_REPORT.md  SPEC_CODING_INFRASTRUCTURE.md  SUMMARY.md  TASK_COMPLETION_ENERGY_REMOVAL.md  TASK_COMPLETION_REPORT.md  TASK_COMPLETION_RESTART_SCRIPTS_TEST.md  TASK_COMPLETION_SUMMARY.md  TASK_STATUS_SUMMARY.md  TASK_SUMMARY.md  TEST_EXECUTION_SUMMARY.md  TEST_REPORT.md  app_export.py  audit_service.py  config_electricity.py  (+51 more)
.claude/: settings.local.json
.claude.backup-2025-10-13T06-54-00/: settings.local.json
.claude/agents/: code-reviewer.json  code-reviewer.md  frontend-developer.json  frontend-developer.md
.claude/commands/: frontend-dev.json  frontend-dev.md
.codebuddy/: analysis-summary.json
.codebuddy/.rules/: 6A-rule.mdc
.github/workflows/: ui-optimization.yml
.qoder/quests/: environment-control-device-module-design.md  frontend-ui-optimization.md  functional-testing-and-issues-fixing.md
.qoder/rules/: 5S.md  6A.md
.trae/rules/: project_rules.md
backend/: __init__.py
backend/app/: __init__.py
backend/app/api/: data_upload.py  energy_dashboard.py
backend/app/config/: electricity_config.py  energy_parameters.py
backend/app/core/: config.py  dependencies.py
backend/app/middleware/: error_handler.py  logging.py  rate_limit.py  response.py  validation.py
backend/app/models/: __init__.py  base.py  data_file.py  energy.py
backend/app/services/: base.py  data_service.py  energy_data_provider.py  energy_service.py  realtime_energy_service.py
config/database/: mysql.py
config/environments/: development.py  production.py  testing.py
config/logging/: handlers.py
desktop/: .gitignore  QUICK_START.md  README.md  api_client.py  build.bat  build.sh  dialogs.py  main.js  main.py  package.json  preload.js  requirements.txt  start-dev.bat  start-dev.sh
desktop/assets/: README.md
desktop/widgets/: __init__.py  data_table.py  device_tree.py  export_panel.py  log_panel.py
docs/: CONTRIBUTING.md  CTO_NEW_SPEC_CODING_WORKFLOW.md  ENERGY_BACKEND_PLAN.md  ENERGY_COCKPIT_LOGGING_ENHANCEMENT.md  ENERGY_DATA_SOURCE_UPDATE.md  ENERGY_REALDATA_INTEGRATION.md  ENERGY_SLIDER_FEATURE.md  INTEGRATION_TEST_PLAN.md  PROJECT_STRUCTURE.md  REAL_DATA_CALIBRATION_PLAN.md  RESTART_SCRIPTS_TESTING.md  SPEC_CODING_GUIDE.md  SPEC_CODING_QUICKSTART.md  SPEC_CODING_README.md  TASK_COMPLETION_REPORT_INTEGRATION.md  TESTING.md  UI_BUTTON_ANALYSIS.md  UI_OPTIMIZATION_GUIDE.md  bugfix-energy-dashboard-line11-miaoling-consumption-mismatch.md  bugfix-energy-dashboard-mismatch.md  data-source-detection.md  energy_dashboard_consumption_fix.md  功能修复总结.md  功能对齐报告.md  差异处理文档.md  新功能实现总结.md  能源驾驶舱数据接入情况报告.md  能源驾驶舱滑动栏功能及数据接入说明.md  自动化验证工具使用说明.md
docs/data_source_fix/: ACCEPTANCE_data_source_fix.md  FINAL_data_source_fix.md  FRONTEND_COMPATIBILITY_ANALYSIS.md  FRONTEND_WRITE_ISSUE_FIX.md  TODO_data_source_fix.md
docs/openapi/: control-module.yaml
docs/工程结构优化/: ACCEPTANCE_工程结构优化.md  ALIGNMENT_工程结构优化.md  CONSENSUS_工程结构优化.md  DESIGN_工程结构优化.md  TASK_工程结构优化.md
docs/异步导出功能/: ACCEPTANCE_异步导出功能.md
docs/界面功能修复/: ACCEPTANCE_界面功能修复.md  ALIGNMENT_界面功能修复.md  CONSENSUS_界面功能修复.md  FINAL_界面功能修复.md
docs/线路配置修复/: ACCEPTANCE_线路配置修复.md  FINAL_线路配置修复.md  TODO_线路配置修复.md
frontend/: .eslintrc.js  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/cypress/e2e/: ui-optimization.cy.js
frontend/public/: diagnostic_tool.html
frontend/scripts/: deploy.sh
frontend/src/: App.vue  AppRouter.vue  App_backup.vue  App_simple.vue  main.js
frontend/src/api/: control.ts  energy.ts
frontend/src/assets/: icons.css
frontend/src/components/: EnergyOptimizationSuggestions.vue  HistoryTrendChart.vue  KpiDashboard.vue  RealtimeEnergyChart.vue
frontend/src/composables/: useAnimation.js  useCountUp.ts  useDataRefresh.ts  useResponsive.js  useToast.ts
frontend/src/router/: index.js
frontend/src/services/: dataProcessor.ts
frontend/src/stores/: app.ts  device.ts  energy.ts  export.ts  index.ts
frontend/src/styles/: design-tokens.css  element-plus-override.css  global.css
frontend/src/utils/: animation.js  responsive.js
requirements/: base.txt  development.txt  production.txt  testing.txt
scripts/: README.md  TEST_SUMMARY.txt  deps.py  push_to_github.ps1  restart_and_test.bat  restart_and_test.py  restart_and_test.sh  uv_setup.ps1  write_body.json
specs/: README.md
specs/templates/: API_SPEC_TEMPLATE.md  COMPONENT_SPEC_TEMPLATE.md  MODEL_SPEC_TEMPLATE.md  SPEC_CHANGE_TEMPLATE.md
tests/: README.md  conftest.py  test_audit_service.py  test_control_service.py  test_db_config.py  test_energy_api.py  test_energy_dashboard_consumption_fix.py  test_energy_dashboard_fix.py  test_energy_edge_cases.py  test_energy_slider_feature.py  test_export_service.py  test_frontend_backend_integration.py  test_main_api.py
tools/: create_spec.py
tools/spec_validation/: validate_api_spec.py
validation/: compare_files.py  validate_consistency.py
(+43 files in other folders)
